Fix the plugin name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Calabash-iOS",
+  "name": "calabash-ios",
   "version": "0.21.2",
   "description": "Cordova plugin for adding Calabash iOS to your app",
   "cordova": {
