--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="com.simpleProdInc.calabashiOS"
-        version="0.21.2">
+        id="cordova-plugin-calabash-ios"
+        version="0.21.3">
 
   <name>CalabashiOS</name>
 
